# Paimon

./: .pre-commit-config.yaml  mypy.ini  pyproject.toml
etc/beball/: chunk_stream.sh  http.conf  manual setup steps to be automated.txt  nginx.service  rtmp.conf
src/beball/: __main__.py  conductor.py  uploader.py  watcher.py
src/paimon/: __init__.py  default_settings.py
tools/pi_emulator/: docker-compose.yml  start.sh  stop.sh
tools/pi_emulator/gopro/: Dockerfile  stream.sh
tools/pi_emulator/rtmp_server/: Dockerfile  nginx.conf
